Fixes navtext overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -214,13 +214,15 @@ button:focus {
 }
 
 .nav-text {
-	font-size: 16px;
-	text-align: center;
-	overflow: hidden;
-	text-overflow: ellipsis;
 	cursor: pointer;
+	font-size: 18px;
+	line-height: 1.3;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    vertical-align: baseline;
 }
-
 
 .nav-text-current {
 	font-weight: bold;
